--- a/styles/tags/sections/cover.css
+++ b/styles/tags/sections/cover.css
@@ -13,17 +13,17 @@
 }
 .cover__title {
     display: flex;
+    align-content: space-between;
     flex-direction: column;
-    justify-content: space-between;
     position: relative;
-    min-height: 385px;
     font-size: 100px;
     font-weight: 700;
-    line-height: 115%;
+    line-height: 1.15;
     color: rgb(255, 255, 255);
     text-transform: uppercase;
     z-index: 2;
     margin: 165px 50px 56px 50px;
+    gap: 20px;
 }
 .cover__description {
     display: flex;
@@ -35,7 +35,7 @@
     margin: 10px 107px 10px 0;
     font-size: 22px;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 1.27;
     text-transform: uppercase;
     color: rgb(255, 255, 255);
     word-spacing: 18.5px;
@@ -47,7 +47,7 @@
     padding: 10.5px 31.5px;
     font-size: 22px;
     font-weight: 500;
-    line-height: 28px;
+    line-height: 1.27;
     text-transform: uppercase;
     color: rgb(255, 255, 255);
     border: 1px solid rgb(255, 255, 255);
