--- a/styles/tags/footer.css
+++ b/styles/tags/footer.css
@@ -7,37 +7,20 @@
     margin: 0;
 }
 .footer__address {
-    display: flex;
-    flex-direction: column;
-    justify-self: end;
-    font-style: normal;
-    line-height: 25px; /*24 в макете, 25 PP*/
-    min-width: 264.57px;
-    font-size: 18px;
-    margin-top: -1px;
-}
-.footer__address-number {
-    text-decoration: 1px underline rgb(0, 0, 0);
-    text-underline-offset: 4px; /**/
-    margin-left: 0.57px;
-}
-.footer__address-mail {
-    text-decoration: 1px underline rgb(0, 0, 0);
-    text-underline-offset: 3.4px; /*4 в макете, 3 PP*/
-    margin-right: 0.57px;
+    max-width: 264.57px;
 }
 .footer__address-text {
     max-width: 260.7px;
     margin-top: 1px;
     margin-left: 1.1px;
-    line-height: 24px; /*24.5 в макете, 24 PP*/
+    line-height: 1.33; /*24.5 в макете, 24 PP*/
 }
 .footer__menu {
     display: flex;
     flex-direction: column;
     justify-content: center;
     min-width: 163.9px;
-    margin-left: -24px; /*для PP*/
+    margin-right: 24px; /*для PP*/
 }
 .footer__menu-list {
     text-align: center;
@@ -46,20 +29,20 @@
     list-style: none;
 }
 .footer__menu-link {
-    line-height: 21px; /*22, 21 PP*/
+    line-height: 1.17;
     font-size: 18px;
     text-decoration: 1px underline rgb(0, 0, 0);
     text-underline-offset: 4px; /*PP*/
 }
 .footer__menu-link_active {
-    line-height: 21px;
+    line-height: 1.17;
     text-decoration: none;
 }
 .footer__social-list {
     display: flex;
     flex-direction: row;
     justify-self: center;
-    min-width: 240px;
+    max-width: 240px;
     gap: 48px;
 }
 .footer__social-list-item {
