--- a/styles/tags/header.css
+++ b/styles/tags/header.css
@@ -3,19 +3,22 @@
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
+    margin: auto;
     padding: 92px 50px 96px 50px;
-    margin: 0;
 }
 .header__menu {
     display: flex;
     align-items: center;
-    min-width: 391.48px;
+    max-width: 391.48px;
 }
 .header__links-list {
     display: flex;
     flex-direction: row;
-    gap: 32.5px;
+    font-style: normal;
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
     font-size: 18px;
+    gap: 32.5px;
 }
 .header__links-list-item {
     list-style: circle;
@@ -26,7 +29,7 @@
 .header__link {
     text-transform: lowercase;
     text-decoration: 1px underline rgb(0, 0, 0);
-    text-underline-offset: 2.5px; /**/
+    text-underline-offset: 4px;
 }
 .header__link_active {
     text-decoration: none;
@@ -36,38 +39,9 @@
     display: flex;
     object-fit: scale-down;
     width: 148px;
-    height: 105px; /*В макете картинка height 105 файл 114px*/
+    height: 105px;
 }
 .header__address {
-    display: flex;
-    flex-direction: column;
-    justify-self: end;
-    font-style: normal;
-    font-family: "Raleway", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24.3px;
     min-width: 240px;
-}
-.header__address-number {
-    text-decoration: 1px underline rgb(0, 0, 0);
-    text-underline-offset: 4.5px; /**/
-    margin-left: 0.52px;
-}
-.header__address-mail {
-    text-decoration: 1px underline rgb(0, 0, 0);
-    text-underline-offset: 4px; /**/
-    margin-right: 0.52px;
-}
-.header__address-text {
-    max-width: 236.49px;
-    margin-top: 1px;
-    margin-left: 1px;
-    text-decoration: none;
-    font-style: normal;
-    font-family: "Raleway", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24.5px;
 }
 /*header class end*/
