--- a/styles/tags/sections/about.css
+++ b/styles/tags/sections/about.css
@@ -6,7 +6,6 @@
 .about__column {
     display: grid;
     grid-template-columns: min-content 1fr;
-    grid-template-rows: 595px;
 }
 .about__logo {
     display: flex;
@@ -15,8 +14,7 @@
     border-radius: 120px;
     width: 240px;
     height: 240px;
-    margin-top: 35px;
-    margin-left: 47px;
+    margin: 35px auto auto 47px;
 }
 .about__logo-image {
     align-self: center;
@@ -26,12 +24,13 @@
 .about__content {
     display: flex;
     flex-direction: column;
-    margin: 145px /*133 в макете, в PixelPerfect (edge) 145px*/ 0 13px 72px;
+    margin: 133px 0 0 72px;
+    padding-top: 13px;
 }
 .about__title {
     font-size: 40px;
     font-weight: 700;
-    line-height: 24px;
+    line-height: 0.6;
     text-transform: uppercase;
     margin-top: 3px;
 }
@@ -40,11 +39,8 @@
     flex-direction: column;
     font-size: 20px;
     font-weight: 400;
-    line-height: 24px;
-    margin-top: 111px; /*100 в макете, в PixelPerfect (edge) 111px*/
+    line-height: 1.2;
+    margin: 111px 3px 0 0; /*100 в макете, в PixelPerfect (edge) 111px*/
     gap: 24px;/*30 в макете, в PixelPerfect (edge) 24px*/
-}
-.about__text-indent {
-    margin-right: 5px;
 }
 /*about class end*/
